<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/drawer_menu_ziRoom"
                android:icon="@drawable/selector_home_img"
                android:title="@string/ziRoom" />
    </group>

    <item android:title="@string/test">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/drawer_menu_test_clock"
                        android:icon="@drawable/selector_clock_img"
                        android:title="@string/test_clock" />
                <item
                        android:id="@+id/drawer_menu_test_draw"
                        android:title="@string/test_draw"
                        android:icon="@drawable/selector_draw_img"
                />
                <item
                        android:id="@+id/drawer_menu_test_webView"
                        android:title="@string/test_webView"
                        android:icon="@drawable/selector_web_img"
                />
            </group>
        </menu>
    </item>
    <item android:title="@string/social">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/drawer_menu_contact"
                        android:icon="@drawable/selector_contact_img"
                        android:title="@string/social_contact_us"
                        app:actionLayout="@layout/item_navigation_menu"/>
                <item
                        android:id="@+id/drawer_menu_share"
                        android:icon="@drawable/selector_share_img"
                        android:title="@string/social_share_app"/>
            </group>
        </menu>
    </item>

</menu>