<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data >
        <import type="android.databinding.ObservableField"/>
        <variable name="displayMsg" type="ObservableField&lt;String&gt;" />
    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button android:id="@+id/button_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:onClick="onClick"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <Button android:id="@+id/button_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:onClick="onClick"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_create"/>
        <Button android:id="@+id/button_retrieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrieve"
                android:onClick="onClick"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_update"/>
        <Button android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:onClick="onClick"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_retrieve"/>
        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                android:text="@{displayMsg}"
                android:layout_marginBottom="160dp" android:layout_marginTop="8dp"/>
    </android.support.constraint.ConstraintLayout>
</layout>